--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,14 @@
-name: Deploy Frontend to GitHub Pages
+name: Deploy Frontend
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - 'frontend/**'
       - '.github/workflows/deploy.yml'
+
+permissions:
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -28,11 +31,11 @@ jobs:
     
     - name: Build project
       run: npm run build
-      env:
-        VITE_API_URL: 'https://sse-nq1x22rx8-dddarinas-projects.vercel.app'
     
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        deploy_key: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        publish_dir: frontend/dist
+        branch: gh-pages
+        folder: frontend/dist
+        clean: true  
+        single-commit: true  
